# CMakeTrainAndroid

./: .README.md.swp  .gitignore  README.md  settings.gradle
app/: .gitignore  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  CopyConstructor.cpp  CopyConstructor.h  native-lib.cpp
app/src/main/java/com/tck/cmaketrainandroid/: MainActivity.java
app/src/main/res/values/: strings.xml
